--- a/BackEnd_Study/pybo/templates/base.html
+++ b/BackEnd_Study/pybo/templates/base.html
@@ -11,9 +11,14 @@
         <title>Hello, pybo!</title>
     </head>
     <body>
+        {% include "navbar.html" %}
         <!-- 기본 템플릿에 삽입할 내용 Start -->
         {% block content %}
         {% endblock %}
         <!-- 기본 템플릿에 삽입할 내용 End -->
+        <!-- jQuery JS -->
+        <script src = "{{ url_for('static', filename = 'jquery-3.6.0.min.js') }}"></script>
+        <!-- Bootstrap JS -->
+        <script src = "{{ url_for('static', filename = 'bootstrap.min.js') }}"></script>
     </body>
 </html>
