--- a/app/src/main/res/layout/activity_user2.xml
+++ b/app/src/main/res/layout/activity_user2.xml
@@ -88,15 +88,15 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_logout"
-        android:layout_margin="100dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/round_button2"
+        android:layout_gravity="center"
+        android:layout_margin="100dp"
         android:layout_marginTop="16dp"
-        android:text="로그아웃"
+        android:background="@drawable/round_button2"
         android:fontFamily="@font/font3"
-        android:textSize="35dp"
-        android:layout_gravity="center"/>
+        android:text="로그아웃"
+        android:textSize="35dp" />
 
 </LinearLayout>
 
