--- a/app/src/main/res/layout/activity_study.xml
+++ b/app/src/main/res/layout/activity_study.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".Study_activity">
+
 
     <TableLayout
         android:layout_width="wrap_content"
@@ -120,14 +121,35 @@
 
             </TableRow>
 
-
-
-
         </TableLayout>
+
+
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageButton
+                android:id="@+id/btnAdd"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_marginStart="330dp"
+                android:layout_marginTop="600dp"
+                android:adjustViewBounds="true"
+                android:background="#00000000"
+                android:scaleType="fitCenter"
+                app:srcCompat="@drawable/ic_baseline_add_circle_24" />
+
+        </LinearLayout>
 
     </FrameLayout>
 
 
 
+</FrameLayout>
 
-</LinearLayout>
