--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="10dp">
 
@@ -21,11 +21,10 @@
                 android:gravity="center_vertical"
                 android:textSize="14sp"/>
 
-            <ImageView
+            <CheckBox
                 android:id="@+id/item_image"
                 android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:background="@color/design_default_color_primary"/>
+                android:layout_height="30dp"/>
 
         </LinearLayout>
 
