App activity_board function

--- a/app/src/main/res/layout/activity_view_study.xml
+++ b/app/src/main/res/layout/activity_view_study.xml
@@ -21,6 +21,7 @@
             android:padding="10dp">
 
             <TextView
+                android:id="@+id/title_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/font3"
@@ -36,6 +37,7 @@
             android:padding="10dp">
 
             <TextView
+                android:id="@+id/content_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/font3"
