--- a/app/src/main/res/layout/activity_plus_study.xml
+++ b/app/src/main/res/layout/activity_plus_study.xml
@@ -22,7 +22,8 @@
             android:text="제목"
             android:textSize="35dp" />
 
-        <TextView
+        <EditText
+            android:id="@+id/title_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_span="1"
@@ -50,7 +51,8 @@
             android:text="내용"
             android:textSize="35dp" />
 
-        <TextView
+        <EditText
+            android:id="@+id/content_text"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_span="1"
