--- a/app/src/main/res/layout/activity_study.xml
+++ b/app/src/main/res/layout/activity_study.xml
@@ -45,11 +45,10 @@
 
         <TableLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
             android:background="@drawable/table_outside"
-            android:stretchColumns="1"
-            >
+            android:stretchColumns="1">
 
             <TableRow>
 
@@ -63,60 +62,29 @@
                     android:text="제목"
                     android:textSize="35dp" />
 
-                <TextView
-                    android:layout_width="50dp"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/table_inside"
-                    android:fontFamily="@font/font3"
-                    android:gravity="center"
-                    android:text="글쓴이"
-                    android:textSize="35dp" />
 
                 <TextView
                     android:layout_width="50dp"
                     android:layout_height="wrap_content"
-                    android:textSize="35dp"
-                    android:text="조회"
-                    android:gravity="center"
-                    android:fontFamily="@font/font3"
+                    android:layout_span="1"
                     android:background="@drawable/table_inside"
-                    android:layout_span="1"/>
+                    android:fontFamily="@font/font3"
+                    android:gravity="center"
+                    android:text="조회"
+                    android:textSize="35dp" />
             </TableRow>
 
             <TableRow>
 
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/blank1"
-                    android:layout_width="200dp"
+                <ListView
+                    android:id="@+id/list_title"
+                    android:layout_width="323dp"
                     android:layout_height="wrap_content"
                     android:layout_span="1"
                     android:background="@drawable/table_inside2"
                     android:fontFamily="@font/font3"
                     android:gravity="center"
-                    android:textSize="20dp"
-                    />
-
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/blank2"
-                    android:layout_width="50dp"
-                    android:layout_height="wrap_content"
-                    android:layout_span="1"
-                    android:background="@drawable/table_inside2"
-                    android:fontFamily="@font/font3"
-                    android:gravity="center"
-                    android:textSize="20dp"
-                    />
-
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/blank3"
-                    android:layout_width="50dp"
-                    android:layout_height="wrap_content"
-                    android:layout_span="1"
-                    android:background="@drawable/table_inside2"
-                    android:fontFamily="@font/font3"
-                    android:gravity="center"
-                    android:textSize="20dp"
-                    />
+                    android:textSize="20dp" />
 
 
             </TableRow>
