--- a/app/src/main/res/layout/activity_view_exercise.xml
+++ b/app/src/main/res/layout/activity_view_exercise.xml
@@ -7,6 +7,15 @@
     android:orientation="vertical"
     tools:context=".ViewExercise">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -69,6 +78,9 @@
             android:textSize="15dp"/>
 
     </LinearLayout>
+
+        </LinearLayout>
+    </ScrollView>
 
 
 </LinearLayout>
