App board_create_edit_delete+session func

--- a/app/src/main/res/layout/activity_view_study.xml
+++ b/app/src/main/res/layout/activity_view_study.xml
@@ -17,72 +17,112 @@
             android:orientation="vertical">
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/table_inside"
-        android:layout_marginTop="20dp"
-        android:orientation="vertical">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp">
-
-            <TextView
-                android:id="@+id/title_view"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/font3"
-                android:gravity="center"
-                android:text="제목적는 부분"
-                android:textSize="45dp" />
+                android:background="@drawable/table_inside"
+                android:layout_marginTop="20dp"
+                android:orientation="vertical">
 
-        </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp">
+                    <TextView
+                        android:id="@+id/title_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/font3"
+                        android:gravity="center"
+                        android:text="제목적는 부분"
+                        android:textSize="45dp" />
 
-            <TextView
-                android:id="@+id/content_view"
+                </LinearLayout>
+                <View
+                    android:layout_width="wrap_content"
+                    android:layout_height="2dp"
+                    android:background="#60E8AD">
+                </View>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <Button
+                        android:id="@+id/Edit_btn"
+                        android:layout_width="50dp"
+                        android:layout_height="35dp"
+                        android:layout_marginLeft="350dp"
+                        android:text="수정"
+                        android:fontFamily="@font/font3"
+                        android:textSize="16dp">
+                    </Button>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp">
+
+                    <TextView
+                        android:id="@+id/content_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="450dp"
+                        android:fontFamily="@font/font3"
+                        android:gravity="center"
+                        android:text="내용적는 부분"
+                        android:textSize="35dp" />
+
+
+                </LinearLayout>
+            </LinearLayout>
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="2dp"
+                android:background="#60E8AD">
+            </View>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/font3"
-                android:gravity="center"
-                android:text="내용적는 부분"
-                android:textSize="35dp" />
+                android:orientation="horizontal"
+                android:padding="10dp"
+                android:background="@drawable/table_inside">
 
-        </LinearLayout>
-    </LinearLayout>
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/ic_baseline_person_24"
+                    android:background="#B5B5B5"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="10dp"
-        android:background="@drawable/table_inside">
+                <EditText
+                    android:id="@+id/comment_text"
+                    android:layout_width="289dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
+                    android:text="댓글"
+                    android:textSize="15dp" />
 
-        <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/ic_baseline_person_24"
-            android:background="#B5B5B5"/>
+                <Button
+                    android:id="@+id/comment_send"
+                    android:layout_width="75dp"
+                    android:layout_height="wrap_content"
+                    android:text="작성"
+                    android:background="@drawable/round_button2"
+                    android:fontFamily="@font/font3"
+                    android:textSize="25dp">
+                </Button>
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:layout_marginLeft="10dp"
-            android:gravity="center_vertical"
-            android:text="댓글기능 입니다"
-            android:textSize="15dp"/>
+            </LinearLayout>
+            <ListView
+                android:id="@+id/comment_list"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
 
-    </LinearLayout>
+            </ListView>
 
         </LinearLayout>
     </ScrollView>
 
 </LinearLayout>
-
