--- a/app/src/main/res/layout/activity_edit_study.xml
+++ b/app/src/main/res/layout/activity_edit_study.xml
@@ -31,7 +31,8 @@
             android:text="제목"
             android:textSize="35dp" />
 
-        <TextView
+        <EditText
+            android:id="@+id/title_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_span="1"
@@ -59,7 +60,8 @@
             android:text="내용"
             android:textSize="35dp" />
 
-        <TextView
+        <EditText
+            android:id="@+id/content_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_span="1"
@@ -86,7 +88,7 @@
             android:layout_marginLeft="200dp"/>
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_minusstudy"
+            android:id="@+id/btn_deletestudy"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/round_button2"
