--- a/app/src/main/res/layout/activity_study.xml
+++ b/app/src/main/res/layout/activity_study.xml
@@ -11,125 +11,119 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-
-    <TableLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:stretchColumns="1">
-
-        <TableRow>
-
-            <SearchView
-                android:layout_width="360dp"
-                android:layout_height="wrap_content"
-                android:background="@drawable/table_outside2"/>
-
-            <ImageButton
-                android:id="@+id/imageButton1"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:adjustViewBounds="true"
-                android:background="#60E8AD"
-                android:scaleType="fitCenter"
-                app:srcCompat="@drawable/ic_baseline_menu_24" />
-
-
-        </TableRow>
-    </TableLayout>
-
-    <FrameLayout
-        android:layout_marginTop="60dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/table_outside"
-        android:orientation="vertical">
-
-
-        <TableLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:background="@drawable/table_outside"
-            android:stretchColumns="1">
-
-            <TableRow>
-
-                <TextView
-                    android:layout_width="200dp"
-                    android:layout_height="wrap_content"
-                    android:layout_span="1"
-                    android:background="@drawable/table_inside"
-                    android:fontFamily="@font/font3"
-                    android:gravity="center"
-                    android:text="제목"
-                    android:textSize="35dp" />
-
-
-                <TextView
-                    android:layout_width="50dp"
-                    android:layout_height="wrap_content"
-                    android:layout_span="1"
-                    android:background="@drawable/table_inside"
-                    android:fontFamily="@font/font3"
-                    android:gravity="center"
-                    android:text="조회"
-                    android:textSize="35dp" />
-            </TableRow>
-
-            <TableRow>
-
-                <ListView
-                    android:id="@+id/list_title"
-                    android:layout_width="323dp"
-                    android:layout_height="wrap_content"
-                    android:layout_span="1"
-                    android:background="@drawable/table_inside2"
-                    android:fontFamily="@font/font3"
-                    android:gravity="center"
-                    android:textSize="20dp" />
-
-
-            </TableRow>
-
-        </TableLayout>
-
-
-    </FrameLayout>
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <ImageButton
-                android:id="@+id/btnAdd"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:layout_marginStart="330dp"
-                android:layout_marginTop="560dp"
-                android:adjustViewBounds="true"
-                android:background="#00000000"
-                android:scaleType="fitCenter"
-                app:srcCompat="@drawable/ic_baseline_add_circle_24" />
+
+            <TableLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:stretchColumns="1">
+
+                <TableRow>
+
+                    <android.widget.SearchView
+                        android:layout_width="360dp"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/table_outside2"/>
+
+                    <ImageButton
+                        android:id="@+id/imageButton1"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:adjustViewBounds="true"
+                        android:background="#60E8AD"
+                        android:scaleType="fitCenter"
+                        app:srcCompat="@drawable/ic_baseline_menu_24" />
+
+
+                </TableRow>
+            </TableLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="450dp">
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="@drawable/table_outside"
+                    android:orientation="vertical">
+
+
+
+                    <TableLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:background="@drawable/table_outside"
+                        android:stretchColumns="1">
+
+                        <TableRow>
+
+                            <TextView
+                                android:layout_width="375dp"
+                                android:layout_height="wrap_content"
+                                android:layout_span="1"
+                                android:background="@drawable/table_inside"
+                                android:fontFamily="@font/font3"
+                                android:gravity="center"
+                                android:text="제목"
+                                android:textSize="35dp" />
+
+                        </TableRow>
+
+                        <TableRow android:layout_height="match_parent">
+
+                            <ListView
+                                android:id="@+id/list"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:background="@drawable/table_inside2"
+                                android:fontFamily="@font/font3"
+                                android:textSize="20dp" />
+
+
+                        </TableRow>
+
+                    </TableLayout>
+
+
+                </FrameLayout>
+            </LinearLayout>
+
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <ImageButton
+                        android:id="@+id/btnAdd"
+                        android:layout_width="70dp"
+                        android:layout_height="70dp"
+                        android:layout_marginStart="330dp"
+                        android:layout_marginTop="5dp"
+                        android:adjustViewBounds="true"
+                        android:background="#00000000"
+                        android:scaleType="fitCenter"
+                        app:srcCompat="@drawable/ic_baseline_add_circle_24" />
+
+                </LinearLayout>
+
+            </FrameLayout>
+
 
         </LinearLayout>
-
-    </FrameLayout>
-
-
-    </LinearLayout>
 
     </ScrollView>
 
 </FrameLayout>
-
