--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -51,12 +51,13 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
-                <Button
+                <androidx.appcompat.widget.AppCompatButton
+                    android:background="@drawable/round_button2"
                     android:id="@+id/validateButton1"
                     android:layout_width="90dp"
                     android:layout_height="wrap_content"
                     android:text="중복체크"
-                    android:textColor="#FFFFFF" />
+                    android:textColor="#000000" />
 
             </LinearLayout>
 
