--- a/app/src/main/res/layout/activity_study.xml
+++ b/app/src/main/res/layout/activity_study.xml
@@ -43,15 +43,15 @@
             </TableLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="450dp">
+                android:layout_width="wrap_content"
+                android:layout_height="600dp">
                 <FrameLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="15dp"
+                    android:layout_marginLeft="5dp"
                     android:layout_marginTop="10dp"
-                    android:layout_marginRight="15dp"
-                    android:layout_marginBottom="10dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginBottom="5dp"
                     android:background="@drawable/table_outside"
                     android:orientation="vertical">
 
